add highlight color options

--- a/config.toml
+++ b/config.toml
@@ -22,6 +22,8 @@ pygmentsUseClasses = true
   addDot = true
   addFrame = true
   highlightColor = '#52cb77'
+  lightHighlightColor = '#e0f6e6'
+  darkHighlightColor = '#1c5e30'
   baseColor = "#ffffff"
   baseOffsetColor = "#eaeaea"
   headingColor = "#1c1b1d"
