--- a/config.toml
+++ b/config.toml
@@ -2,7 +2,7 @@ baseURL = "https://izabelacborges.github.io/"
 languageCode = "en-us"
 theme = "winston"
 themesDir = "themes"
-title = "izabelacborges.github.io"
+title = "izabelacborges"
 paginate = 5
 pygmentsCodeFences = true
 pygmentsCodefencesGuessSyntax = true
